@@ -71,6 +71,55 @@ $flight2 = array('param' => 'EDIT',
 		'plane' => 'Airbus A2380',
 		'note' => 'EditFlightTest,;:\'"Chars');
 
+$multiflight = array('param' => 'ADD',
+		     'multi' => '4',
+		     'src_date1' => '2009-01-01',
+		     'src_apid1' => '1010',
+		     'dst_apid1' => '1011',
+		     'alid1' => '2010',
+		     'src_date2' => '2009-02-02',
+		     'src_apid2' => '1020',
+		     'dst_apid2' => '1021',
+		     'alid2' => '2020',
+		     'src_date3' => '2009-03-03',
+		     'src_apid3' => '1030',
+		     'dst_apid3' => '1031',
+		     'alid3' => '2030',
+		     'src_date4' => '2009-04-04',
+		     'src_apid4' => '1040',
+		     'dst_apid4' => '1041',
+		     'alid4' => '2040',
+		     'duration' => '',
+		     'distance' => '',
+		     'number' => '',
+		     'seat' => '',
+		     'type' => '',
+		     'class' => '',
+		     'reason' => '',
+		     'registration' => '',
+		     'trid' => 'NULL',
+		     'plane' => '',
+		     'mode' => 'F',
+		     'note' => 'AddMultiFlightTest,;:\'"Chars');
+
+$loopflight = array('param' => 'ADD',
+		    'src_date' => '2009-02-03',
+		    'src_apid' => '1100',
+		    'dst_apid' => '1100',
+		    'alid' => '2100',
+		    'duration' => '',
+		    'distance' => '',
+		    'number' => '',
+		    'seat' => '',
+		    'type' => '',
+		    'class' => '',
+		    'reason' => '',
+		    'registration' => '',
+		    'trid' => 'NULL',
+		    'plane' => '',
+		    'mode' => 'F',
+		    'note' => 'AddLoopFlightTest,;:\'"Chars');
+
 // Database configuration
 $dbhost = "localhost";
 $dbuser = "openflights";
